fix: create local.properties for appcenter